Lazy file picker, responsive slider, resolution restricting, intra scf/ctg context in ruler, , OSD settings
